force-app/main/default/objects/Opportunity_Stage_Stagnation_Threshold__mdt/Opportunity_Stage_Stagnation_Threshold__mdt.object-meta.xml
<CustomObject>
    <description
  >Stores per-Opportunity-stage stagnation thresholds and optional guidance text for stage stagnation notifications.</description>
    <label>Opportunity Stage Stagnation Threshold</label>
    <pluralLabel>Opportunity Stage Stagnation Thresholds</pluralLabel>
</CustomObject>