force-app/main/default/objects/Opportunity_Stage_Stagnation_Threshold__mdt/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <inlineHelpText
  >Stores the exact Opportunity StageName value. Must match Opportunity.StageName exactly.</inlineHelpText>
    <label>Stage Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>