force-app/main/default/objects/Opportunity_Stage_Stagnation_Threshold__mdt/fields/Suggested_Next_Actions__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Next_Actions__c</fullName>
    <inlineHelpText
  >Optional guidance text to include in stagnation notifications.</inlineHelpText>
    <label>Suggested Next Actions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>