force-app/main/default/objects/Opportunity_Stage_Stagnation_Threshold__mdt/fields/Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Days__c</fullName>
    <inlineHelpText
  >Number of days allowed in the stage before a stagnation notification is sent.</inlineHelpText>
    <label>Threshold Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>